Criação do Menu
Barra de navegação superior, Transparente

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Música para todos - Spotify</title>
+    <title>Música para todos - Spotify Clone</title>
     <link rel="icon"  href="imagens/favicon.png">
 
     <!-- Bootstrap -->
@@ -21,7 +21,36 @@
   </head>
   <body>
 
+    <!-- Barra de Navegação -->
+    <nav class="navbar navbar-fixed-top navbar-inverse navbar-transparente">
+      <div class="container">
+        <!-- header nav bar -->
+        <div class="navbar-header">
+          <!-- button toggle  -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle ="collapse" data-target="#barra-navegacao">
+            <span class="sr-only">alternar Navegação</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
+          <a href="index.html" class="navbar-brand">
+            <span class="img-logo">Spotify Clone</span>
+          </a>
+        </div> <!--  end of header nav bar -->
+           <!-- menu  -->
+          <div class="collapse navbar-collapse" id="barra-navegacao" >
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="">Premium</a></li>
+              <li><a href="">Ajuda</a></li>
+              <li><a href="">Baixar</a></li>
+              <li class="divisor" role="separator"></li>
+              <li><a href="">Inscrever-se</a></li>
+              <li><a href="">Entrar</a></li>
+            </ul>
+          </div> <!-- end of menu-->
+      </div> <!-- end of container -->
+    </nav><!-- end  of nav bar -->
 
 
 
