--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="estilo.css" rel="stylesheet">
+    <link href="estilo.css" media="screen" rel="stylesheet">
+    <link href="estilo-impressao.css" media="print" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,7 +62,7 @@
    </div><!-- end of Capa -->
 
 <!-- Conteudos -->
-  <section id="servicos">
+  <section id="servicos" >
     <div class="container">
       <div class="row">
         <!-- albuns -->
@@ -118,7 +119,7 @@
         </div>
 
         <div class="col-md-8"><!-- img Recursos -->
-          <div class="row rotacionar" >
+          <div class="row rotacionar  hidden-xs" >
             <div class="col-md-6">
               <img src="imagens/iphone1.png" class="img-responsive">
             </div>
